flex/flex-tests/testData/flex_scope/TestScope_2.mxml
<?xml version="1.0"?>
<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
  <fx:Script><![CDATA[
    import com.sample.lib.LibraryClassInPackage;
    import com.sample.lib2.Library2ClassInPackage;
    import com.sample.lib3.Library3ClassInPackage;
    import com.sample.lib4.Library4ClassInPackage;

    public function foo() {
      var v1 : LibraryClass;
      var v2 : LibraryClassInPackage;

      var v3 : Library2Class;
      var v4 : Library2ClassInPackage;

      var v5 : Library3Class;
      var v6 : Library3ClassInPackage;

      var v7 : Library4Class;
      var v8 : Library4ClassInPackage;

      var m2: M2;
      var m3: <error descr="Unresolved type M3">M3</error>;
    }

    ]]></fx:Script>
</s:Application>
